# courseography

./: .babelrc  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .hlint.yaml  .pnp.cjs  .pnp.js  .pre-commit-config.yaml  .prettierignore  .prettierrc  .stylelintrc.json  .stylish-haskell.yaml  .yarnrc.yml  132266050.tex  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  Procfile.dev  README.md  Route.hs  Setup.hs  babel.config.json  building.csv  calendarParser.py  circle.yml  config.yaml  courseography.cabal  courseography.sublime-project  createData.js  cypress.json  email.php  eslint.config.cjs  ex3_test.hs  export.tex  fourmolu.yaml  graphStyles.css  jest.config.js  package-lock.json  package.json  planner.html  (+20 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
Minfan_dynamicgraph_graphgenerator_incomplete-version/: WriteRunDot.hs  graph_generator_incomplete_version.hs
app/: Config.hs  Controllers.hs  DevelopmentConfig.hs  FacebookUtilities.hs  GetImages.hs  ImageConversion.hs  LatexGenerator.hs  Main.hs  MasterTemplate.hs  PdfGenerator.hs  Response.hs  Route.hs  Routes.hs  Scripts.hs  Server.hs  TimetableImageCreator.hs  hie.yaml
app/Controllers/: Course.hs  Generate.hs  Graph.hs  Post.hs  Program.hs  Timetable.hs
app/Css/: About.hs  Common.hs  Compiler.hs  Constants.hs  Draw.hs  FourOhFour.hs  Generate.hs  Graph.hs  INFORMATION.md  Loading.hs  Post.hs  Privacy.hs  README.md  Search.hs  Timetable.hs
app/Database/: 16-07-27-weekly-summary.txt  Course.hs  CourseInsertion.hs  CourseQueries.hs  CourseReq.hs  DataType.hs  (+11 more)
backend-test/: Main.hs  TestHelpers.hs
db/: building.csv
dynamicgraph_Graphviz_failedtries/: dataflow_test.hs  using_existingpraph_from_stackoverflow.hs
generate/: generate.css  generate.js
graphs/: German.graphml  Rotman.graphml  abs2015.graphml  bch2015.graphml  csb2015.graphml  csc2015.graphml  csc2016.graphml  csc2017.graphml  csc2019.graphml  csc2020.graphml  csc2023.graphml  csc2024.graphml  csc2025.graphml  csc2026.graphml  eco2015.graphml  fre2015.graphml  ggr2015.graphml  hps2015.graphml  matt_specialist2022.graphml  prt2015.graphml  sla2015.graphml  sta2015.graphml  sta2017.graphml  sta2022.graphml
hs/: AboutCss.hs  AboutCssGen.hs  AboutResponse.hs  Calendar.hs  CalendarResponse.hs  CommonCss.hs  CommonCssGen.hs  Config.hs  Constants.hs  Consts.hs  ConvertSVGToPNG.hs  CourseographyFacebook.hs  CssGen.hs  Database-CourseQueries.html  Database-JsonParser.html  Database-Tables.html  DevelopmentConfig.hs  Development_Config.hs  Diagram.hs  DrawCss.hs  DrawResponse.hs  DrawSave.hs  ExportResponse.hs  FacebookUtilities.hs  FourOhFourResponse.hs  GraphCss.hs  GraphCssGen.hs  GraphResponse.hs  GridResponse.hs  ImageConversion.hs  ImageResponse.hs  JsonResponse.hs  JsonResponseHelper.hs  Latex.hs  Main.hs  MakeElements.hs  MasterTemplate.hs  ParserUtil.hs  PostCss.hs  PostResponse.hs  (+24 more)
hs/Css/: About.hs  AboutCss.hs  Common.hs  CommonCss.hs  Compiler.hs  Constants.hs  CssGen.hs  Draw.hs  DrawCss.hs  FourOhFour.hs  FourOhFourCss.hs  Graph.hs  GraphCss.hs  Post.hs  PostCss.hs  Privacy.hs  PrivacyCss.hs  Search.hs  SearchCss.hs  Timetable.hs  TimetableCss.hs
hs/Database/: CourseInsertion.hs  CourseQueries.hs  CourseVideoSeed.hs  DataType.hs  Database.hs  DepartmentInformation.hs  JsonParser.hs  SvgDatabase.hs  Tables.hs  database.hs
hs/Response/: About.hs  AboutResponse.hs  Calendar.hs  Draw.hs  DrawJson.hs  DrawResponse.hs  Export.hs  Graph.hs  GraphResponse.hs  Grid.hs  GridResponse.hs  Image.hs  JsonResponse.hs  Loading.hs  MakeElements.hs  MasterTemplate.hs  NotFound.hs  Post.hs  PostResponse.hs  Privacy.hs  README.md  Scripts.hs
hs/Svg/: Builder.hs  Database.hs  Generator.hs  Parser.hs  ParserUtil.hs
hs/SvgParsing/: Builder.hs  Generator.hs  ParserUtil.hs  SVGBuilder.hs  SVGGenerator.hs  SVGTypes.hs  Types.hs  parser.hs
hs/SvgTests/: BuilderTests.hs  ParserTests.hs
hs/Util/: Blaze.hs  Happstack.hs  README.md
hs/WebParsing/: ArtSciParser.hs  GraphConversion.hs  GraphVisualization.hs  HtmlTable.hs  ParseAll.hs  ParsingHelp.hs  PrerequisiteParsing.hs  TTParser.hs  TimeConverter.hs  TimeTableParser.hs  UTSCParser.hs  output.txt
hs/blaze-svg-0.3.4/: blaze-svg.cabal
hs/blaze-svg-0.3.4/examples/: Example.hs
hs/blaze-svg-0.3.4/src/Text/Blaze/: Svg.hs  Svg11.hs
hs/blaze-svg-0.3.4/src/Text/Blaze/Svg/: Internal.hs
hs/blaze-svg-0.3.4/src/Text/Blaze/Svg/Renderer/: Pretty.hs  String.hs  Text.hs  Utf8.hs
hs/blaze-svg-0.3.4/src/Text/Blaze/Svg11/: Attributes.hs
hs/blaze-svg-0.3.4/src/Util/: GenerateSvgCombinators.hs  Sanitize.hs
hs/database/: CourseQueries.hs  InsertCourses.hs  JsonParser.hs  Tables.hs  database.hs  json_parser.hs  schema.er  tester.hs
hs/parser/: parser.hs
hs/web_parsing/: ArtSciParser.hs  ParseAll.hs  ParsingHelp.hs  UTSCParser.hs  output.txt
js/: cookieHandler.js  createData.js  experiment.js  modal.js  parseGraph.js  post.js  setupTests.js  setupTestsAfterEnv.js  structs.js  tabs.js  util.js  webpack.local.config.js
post/: change_div.js  post.html  post_styles.css
res/: Calc1_calendar.txt  Lin1_calendar.txt  Sta1_calendar.txt  Sta2_calendar.txt  calendar.txt  courses.txt  fallGrid.html  finalgraph.graphml  master.xlsx  springGrid.html  timeTable  timeTable.txt  timetable2014.txt  timetableHTML.html  timetableHTML2014.html
script/: bootstrap  dev
scripts/: BuildingGeocoder.py  downloadJson.py  setup_linux  setup_osx  setup_windows.bat
sql/: courses.ddl
src_html/: planner.html
src_js/: parseGraph.js  post.js  structs.js  tabs.js
style/: app.js  app.scss  graphStyles.css  styles.css  timetable_styles.css
tests/: ParserTests.hs  common_tests.js  tests.html
timetable_creator/: timetable_creator.html  timetable_structs.js  timetable_styles.css  timetable_util.js
utilities/: email.php
web_parsing/: calendarParser.py  dcsTimetableParser.py  faculty.py  fasCalendarParser.py  fasTimetableParser.py  grid.py  main.py  timeTableRetriever.py  timetableOut.junk  timetableParser.py  timetableParserIanCommit.py  ttparser.py
wiki/: DEBUGGING.md  hlsguide
(+636 files in other folders)
