cabal-version:       3.0
name:                courseography
version:             0.6.0.0
synopsis:            Program and course planning app for the University of Toronto.
description:         A web application designed to aid students in planning their courses
                     at the University of Toronto.
homepage:            https://courseography.teach.cs.toronto.edu
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              David Liu
maintainer:          david@cs.toronto.edu
-- copyright:
category:            Planning
build-type:          Custom

custom-setup
  setup-depends:
    base >= 4.14,
    Cabal >= 3.0,
    process >= 1.2,
    directory

test-suite Tests
  main-is: Tests/Main.hs
  other-modules:
    Config,
    Controllers.Course,
    Database.CourseInsertion,
    Database.CourseQueries,
    Database.CourseVideoSeed,
    Database.Database,
    Database.DataType,
    Database.Requirement,
    Database.Tables,
    DynamicGraphs.GraphNodeUtils,
    RequirementTests.ModifierTests,
    RequirementTests.PostParserTests,
    RequirementTests.PreProcessingTests,
    RequirementTests.ReqParserTests,
    RequirementTests.RequirementTests,
    Svg.Builder,
    Tests.CourseControllerTests,
    Tests.TestHelpers,
    Util.Happstack,
    WebParsing.ParsecCombinators,
    WebParsing.PostParser,
    WebParsing.ReqParser,
    WebParsing.ArtSciParser
  Type: exitcode-stdio-1.0
  build-depends:
    aeson,
    base >=4.14,
    bytestring,
    Cabal >= 1.16.0,
    containers,
    directory,
    happstack-server,
    hslogger,
    http-conduit,
    http-types,
    HUnit,
    MissingH,
    monad-logger,
    mtl,
    parsec,
    persistent,
    persistent-sqlite,
    QuickCheck,
    resourcet,
    split,
    system-filepath,
    tagsoup,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    text,
    time,
    transformers,
    unordered-containers,
    yaml
  default-extensions:
    OverloadedStrings,
    ScopedTypeVariables
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: app

executable courseography
  main-is:             Main.hs
  other-modules:
    Config,
    Css.Constants,
    Controllers.Course,
    Controllers.Graph,
    Controllers.Generate,
    Controllers.Timetable,
    Database.CourseInsertion,
    Database.CourseQueries,
    Database.CourseVideoSeed,
    Database.Requirement,
    Database.DataType,
    Database.Database,
    Database.Tables,
    DynamicGraphs.CourseFinder,
    DynamicGraphs.WriteRunDot,
    DynamicGraphs.GraphGenerator,
    DynamicGraphs.GraphNodeUtils,
    DynamicGraphs.GraphOptions,
    Export.GetImages,
    Export.ImageConversion,
    Export.LatexGenerator,
    Export.PdfGenerator,
    Export.TimetableImageCreator,
    MasterTemplate,
    Response,
    Response.About,
    Response.Draw,
    Response.Image,
    Response.Loading,
    Response.NotFound,
    Response.Post,
    Response.Search,
    Routes,
    Scripts,
    Server,
    Svg.Builder,
    Svg.Database,
    Svg.Generator,
    Svg.Parser,
    Util.Blaze,
    Util.Documentation,
    Util.Happstack,
    WebParsing.ArtSciParser,
    WebParsing.Ligature,
    WebParsing.PostParser,
    WebParsing.ReqParser,
    WebParsing.UtsgJsonParser,
    WebParsing.ParsecCombinators
  -- These are compiler extensions used for every module
  default-extensions:
    OverloadedStrings,
    PartialTypeSignatures,
    ScopedTypeVariables
  other-extensions:
    DeriveGeneric,
    EmptyDataDecls,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    QuasiQuotes,
    TemplateHaskell,
    TypeFamilies
  build-depends:
    base >= 4.9,
    blaze-markup,
    blaze-html,
    happstack-server,
    blaze-svg,
    bytestring,
    aeson,
    transformers,
    base64-bytestring,
    split,
    fgl,
    graphviz,
    filepath,
    containers,
    unordered-containers,
    random,
    process >= 1.2,
    diagrams-lib >= 1.3,
    diagrams-svg >= 1.3.1,
    lucid,
    MissingH,
    text,
    http-conduit,
    http-types,
    resourcet,
    conduit,
    persistent >= 2.1.2,
    persistent-sqlite,
    http-client,
    network,
    HTTP,
    tagsoup,
    regex-posix,
    mtl,
    persistent-template,
    vector,
    directory,
    markdown,
    system-filepath,
    hslogger,
    old-locale,
    time,
    parsec,
    HaTeX,
    yaml,
    monad-logger
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: app

extra-packages: hlint
